Grease pencil mirror modifier with empty not mirroring over empty object #59446

Closed
opened 2018-12-16 07:09:44 +01:00 by Johnny Varila · 13 comments

System Information
Operating system: Windows 10
Graphics card: Dell internal + Nvidia gtx 1050

Blender Version
Broken: 2.80, ff108aac63

Short description of error
Using the mirror modifier with a regular empty (plain axes) as the mirror object over x axis doesn't use the empty as the mirror plane. Also when pressing N in the dope sheet an empty window opens on the right.

Exact steps for others to reproduce the error
Create grease pencil object, add empty, use mirror modifier and set the empty as the mirror object, move empty and/or grease pencil object.

**System Information** Operating system: Windows 10 Graphics card: Dell internal + Nvidia gtx 1050 **Blender Version** Broken: 2.80, ff108aac631 **Short description of error** Using the mirror modifier with a regular empty (plain axes) as the mirror object over x axis doesn't use the empty as the mirror plane. Also when pressing N in the dope sheet an empty window opens on the right. **Exact steps for others to reproduce the error** Create grease pencil object, add empty, use mirror modifier and set the empty as the mirror object, move empty and/or grease pencil object.
Author

Added subscriber: @Zoni

Added subscriber: @Zoni

Added subscriber: @antoniov

Added subscriber: @antoniov

I cannot reproduce in Windows 10.

I tested all these steps and all worked as expected.:

  1. Create GP Object.
  2. Create some strokes.
  3. Add mirror modifier.
  4. Add empty.
  5. Use empty as mirror object.
  6. Move empty ->OK
  7. Move GP object -> OK
I cannot reproduce in Windows 10. I tested all these steps and all worked as expected.: 1) Create GP Object. 2) Create some strokes. 3) Add mirror modifier. 4) Add empty. 5) Use empty as mirror object. 6) Move empty ->OK 7) Move GP object -> OK
Author

mirror.jpg

![mirror.jpg](https://archive.blender.org/developer/F5970922/mirror.jpg)
Author

mirror2.jpg

![mirror2.jpg](https://archive.blender.org/developer/F5970958/mirror2.jpg)
Author

The objects are mirrored over the same empty.

The objects are mirrored over the same empty.

Added subscriber: @AFWS

Added subscriber: @AFWS

I get the same here on Windows 10 x64. Looks like if you keep the empty at (0.0, 0.0, 0.0). the mirror doesn't go beyond the 0.0 point of the selected mirror axis. If this is normal, it sure is odd behavior for a mirror modifier.

grease_pencil_mirror.blend

I get the same here on Windows 10 x64. Looks like if you keep the empty at (0.0, 0.0, 0.0). the mirror doesn't go beyond the 0.0 point of the selected mirror axis. If this is normal, it sure is odd behavior for a mirror modifier. [grease_pencil_mirror.blend](https://archive.blender.org/developer/F5972032/grease_pencil_mirror.blend)
Antonio Vazquez self-assigned this 2018-12-16 18:52:50 +01:00

This issue was referenced by ea33b90a1b

This issue was referenced by ea33b90a1bf21061ab8a862d862db4dea048b28c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @bunny

Added subscriber: @bunny

Still got an issue here; translation now works as expected but rotation doesn't mirror.

suz.jpg
suz.blend

Still got an issue here; translation now works as expected but rotation doesn't mirror. ![suz.jpg](https://archive.blender.org/developer/F5986659/suz.jpg) [suz.blend](https://archive.blender.org/developer/F5986673/suz.blend)

We never added support for rotation to this modifier. Grease Pencil modifiers are not necessary equal to mesh modifiers so we haven't replicated all features.

As this is a feature request, I take note but keep close the report because the reported bug was fixed.

We never added support for rotation to this modifier. Grease Pencil modifiers are not necessary equal to mesh modifiers so we haven't replicated all features. As this is a feature request, I take note but keep close the report because the reported bug was fixed.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59446
No description provided.