Fix T59446: Grease pencil mirror modifier wrong

The mirror was working different to mesh mirror and the result was not the expected.